# cmaes-proxy-sigma-controller

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESCENT_GEOMETRY_CONTROLLER_DESIGN_PLAN.md  Descent_Geometry_Revised_Hypothesis_2026_03_06.docx  EXPERIMENT_PIPELINE.md  IMPLEMENTATION_PLAN.md  RUNBOOK.md  TECHNICAL_DESIGN_SPEC.md  TECHNICAL_DESIGN_STORY.md
docs/mechanism_analysis/: short_version.md
docs/technical-note/: technical_note.md
examples/: pycma_sphere_demo.py
experiments/: __init__.py  analyze.py  config.py  descent_geometry.py  findings.py  hypotheses.py  io.py  methods.py  objectives.py  pairwise.py  plots.py  run.py  stats.py
experiments/config/: descent_geom_anchors_full.yaml  descent_geom_dense_hybrid.yaml  descent_geom_interaction_hybrid.yaml  high_rigor.yaml  sensitivity.yaml  smoke.yaml
release-assets/v0.1.0/: evidence_manifest.json  reference_runs.csv  (+1 more)
scripts/: analyze_descent_geometry_metrics.py  build_publication_evidence.py  run_descent_geometry_suite.sh  run_high_rigor_pipeline.sh  run_sensitivity_pipeline.sh  run_smoke_pipeline.sh  verify_experiment_artifacts.py
tests/: test_config_validation.py  test_descent_geometry_configs.py  test_descent_geometry_metrics.py  test_descent_geometry_suite_script.py  test_determinism_replay.py  test_experiment_config.py  test_experiment_hypotheses.py  test_experiment_pipeline_smoke.py  test_experiment_registry.py  test_experiment_stats.py  test_occupancy_metrics.py  test_phase_transitions.py  test_policy_core.py  test_pycma_adapter_smoke.py  test_reference_runner.py  test_stats.py  test_telemetry_trace.py  test_trace_selector.py
(+78 files in other folders)
