[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cmaes-proxy-sigma-controller"
version = "0.1.0"
description = "Mechanism-aware proxy sigma controller for CMA-ES"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "VelocityWorks"}]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
pycma = [
  "cma>=3.3",
]
experiments = [
  "matplotlib>=3.9",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "scipy>=1.13",
]
dev = [
  "cma>=3.3",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "PyYAML>=6.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "scipy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cmaes_proxy_sigma_controller"]

[tool.pytest.ini_options]
addopts = "-q --cov=src/cmaes_proxy_sigma_controller --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
